Backend: Fix admin panel.

--- a/render.yaml
+++ b/render.yaml
@@ -21,6 +21,10 @@ services:
     rootDir: frontend
     buildCommand: npm install && npm run build
     staticPublishPath: build
+    routes:
+    - type: rewrite
+      source: /.*  # This means anything
+      destination: /index.html
     envVars:
       - key: REACT_APP_API_URL
         value: https://nomadic-beaded-tales-backend.onrender.com
