--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ asgiref==3.8.1
 Django==5.2.3
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
+djangorestframework-simplejwt==5.2.2
+django-storages==1.14.0
+django-filter==23.1.0
 gunicorn==23.0.0
 packaging==25.0
 pillow==11.2.1
