--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.8.1
 Django==5.2.3
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
-djangorestframework-simplejwt==5.2.2
+djangorestframework-simplejwt>=5.2.2
 django-storages==1.14.0
 django-filter==23.1.0
 gunicorn==23.0.0
@@ -12,3 +12,4 @@ sqlparse==0.5.3
 typing_extensions==4.14.0
 tzdata==2025.2
 whitenoise==6.9.0
+setuptools>=65.0.0
