--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
     startCommand: gunicorn nomadic_beaded_core.wsgi
     envVars:
       - key: DJANGO_ALLOWED_HOSTS
-        value: nomadic-beaded-tales-backend.onrender.com
+        value: nomadic-beaded-tales-backend.onrender.com,nomadic-frontend.onrender.com
       - key: DJANGO_SECRET_KEY
         value: changeme-in-prod
       - key: DJANGO_DEBUG
@@ -22,9 +22,9 @@ services:
     buildCommand: npm install && npm run build
     staticPublishPath: build
     routes:
-    - type: rewrite
-      source: /.*  # This means anything
-      destination: /index.html
+      - type: rewrite
+        source: /.*
+        destination: /index.html
     envVars:
       - key: REACT_APP_API_URL
         value: https://nomadic-beaded-tales-backend.onrender.com
